--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -41,7 +41,7 @@
             android:layout_height="30dp"
             android:layout_marginLeft="120dp"
             android:layout_marginTop="110dp"
-            android:text="username"
+            android:text="please wait"
             android:textColor="@color/white"
             android:textSize="20dp"
             android:textStyle="bold" />
@@ -130,14 +130,16 @@
                 android:layout_marginLeft="20dp"
                 android:src="@drawable/duckblack" />
 
-            <TextView
-                android:layout_width="200dp"
-                android:layout_height="30dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="DuckTive Companion"
+            <Button
+                android:id="@+id/btnCompanion"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Ducktive Companion"
                 android:textSize="18dp"
+                android:textAlignment="textStart"
                 android:textStyle="bold" />
+
 
 
         </LinearLayout>
@@ -200,7 +202,7 @@
 
             <Button
                 android:id="@+id/btnLogout"
-                android:layout_width="270dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Logout"
